# Measurement-Devices-Communication-Library

./: .gitignore  MANIFEST.in  README.md  config.example.ini  pyproject.toml
dependencies/: INSTALLATION_KOLLEGEN.md  README.md
orig/: DOC02146703-0011_Messgeraetezugriff.xlam  Funktionen.bas.txt  Hilfsfunktionen.bas.txt  INSTRUMENT_VISA.ini  PortDeklaration.bas.txt  RibbonFunktionen.bas.txt  TypeDefs.bas.txt  clsIni.cls.txt  filehandler.bas.txt  getVisaDevices.cls.txt  getVisaFile.cls.txt  serialportIO.bas.txt  verweise.bas.txt
scripts/: build_exe.ps1  package_release.ps1
src/instrument_visa/: __init__.py  acquisition.py  cli.py  config.py  excel_export.py  gui.py  gui_launcher.py  logging_utils.py  picoscope_client.py  profiles.py  saleae_client.py  sequence.py  visa_client.py
tests/: test_acquisition.py
