[project]
name = "instrument-visa-export"
version = "0.1.0"
description = "Standalone Python tool for VISA/SCPI instrument communication and Excel export."
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pyvisa>=1.14.0",
    "pyvisa-py>=0.7.0",
]

[project.scripts]
instrument-visa = "instrument_visa.cli:main"
instrument-visa-gui = "instrument_visa.gui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
