[project]
name = "measurement-devices-communication-library"
version = "0.8.13"
description = "Measurement devices communication library and GUI for VISA/SCPI instruments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pyserial>=3.5",
    "pyvisa>=1.14.0",
    "pyvisa-py>=0.7.0",
    "paramiko>=3.4.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
saleae = [
    "logic2-automation>=1.0.0",
]

[project.scripts]
instrument-visa = "instrument_visa.cli:main"
instrument-visa-gui = "instrument_visa.gui:main"
measurement-devices = "instrument_visa.cli:main"
measurement-devices-gui = "instrument_visa.gui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
